src/core-crm/objects/Questionnaire_Response_Summary__c/Questionnaire_Response_Summary__c.object-meta.xml
<CustomObject>
    <description>This will summarise the response of leaner to a questionnaire per offering.</description>
    <label>Questionnaire Response Summary</label>
    <nameField>
        <displayFormat>QRS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Response Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>