src/core-crm/objects/Questionnaire_Response_Summary__c/fields/Cart_URL__c.field-meta.xml
<CustomField>
    <fullName>Cart_URL__c</fullName>
    <label>Cart URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>