src/core-crm/objects/Questionnaire_Response_Summary__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the contact answering the questionnaire.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Questionnaire Response Summaries</relationshipLabel>
    <relationshipName>Questionnaire_Response_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>