src/core-crm/objects/Questionnaire_Response_Summary__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <description>This is a hidden formula field to contain the Course Name for email template merge fields usage.</description>
    <formula>Course_Offering__r.hed__Course__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>