src/core-crm/objects/Questionnaire_Response_Summary__c/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the course offering the responses answered from.</description>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Questionnaire Response Summaries</relationshipLabel>
    <relationshipName>Questionnaire_Response_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>