src/core-crm/objects/Questionnaire_Response_Summary__c/fields/Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_URL__c</fullName>
    <description>Whole payment URL that redirects to QUT Pay</description>
    <label>Payment URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>