src/core-crm/objects/Questionnaire_Response_Summary__c/fields/Pricebook_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Entry_ID__c</fullName>
    <externalId>true</externalId>
    <label>Pricebook Entry ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>