src/core-crm/objects/Questionnaire_Response_Summary__c/fields/Program_Offering__c.field-meta.xml
<CustomField>
    <fullName>Program_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the program plan offering the responses answered from.</description>
    <label>Program Offering</label>
    <referenceTo>Program_Offering__c</referenceTo>
    <relationshipLabel>Questionnaire Response Summaries</relationshipLabel>
    <relationshipName>Questionnaire_Response_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>