src/core-crm/objects/Questionnaire_Response_Summary__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the questionnaire containing questions.</description>
    <label>Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Questionnaire Response Summaries</relationshipLabel>
    <relationshipName>Questionnaire_Response_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>