src/core-crm/objects/Questionnaire_Response_Summary__c/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <description>This field is an explanation to the learner advising why the application has been rejected.</description>
    <label>Reason for Rejection</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>